# Solana_PDA_Practice

./: .gitignore  Cargo.toml  Cargo.toml.debug  README.md
client/: .env.example  keypair.json  package-lock.json  package.json
client/src/: index.ts  initialize.ts  update-message.ts  update.ts  utils.ts
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
