[package]
name = "solana_clean_demo"
version = "0.1.0"
edition = "2018"
rust-version = "1.62.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.16.0"
borsh = "=0.9.3"
borsh-derive = "=0.9.3"
thiserror = "=1.0.40"
once_cell = "=1.17.1"
serde_bytes = "=0.11.9"
constant_time_eq = "=0.1.5"
cc = "=1.0.79"
jobserver = "=0.1.26"
libc = "=0.2.144"
either = "=1.8.1"
bumpalo = "=3.11.1"

